[CI] Publish Documentation for 9ef00bfa547ea398ac23d52f1ff2709f4ee67f00

--- a/datasonnet/latest/libraries.html
+++ b/datasonnet/latest/libraries.html
@@ -2688,6 +2688,9 @@ All properties of the object can be removed using a <code>value</code> in the ar
 <p>Returns true if every value <code>arr</code> returns true in <code>func</code>.</p>
 </div>
 <div class="paragraph">
+<p>The function <code>func</code> is expected to take the item as the first parameter (required).</p>
+</div>
+<div class="paragraph">
 <p><strong>Example</strong></p>
 </div>
 <div class="listingblock">
@@ -3222,6 +3225,9 @@ All properties of the object can be removed using a <code>value</code> in the ar
 <p>Returns true if at least one item in <code>arr</code> passes the condition in <code>func</code>.</p>
 </div>
 <div class="paragraph">
+<p>The function <code>func</code> is expected to take the item as the first parameter (required).</p>
+</div>
+<div class="paragraph">
 <p><strong>Example</strong></p>
 </div>
 <div class="listingblock">
@@ -3342,6 +3348,9 @@ All properties of the object can be removed using a <code>value</code> in the ar
 <h3 id="_sumbyarray_arr_function_func"><a class="anchor" href="#_sumbyarray_arr_function_func"></a><code>sumBy(array arr, function func)</code></h3>
 <div class="paragraph">
 <p>Calculates the sum of <code>arr</code> by the function provided value.</p>
+</div>
+<div class="paragraph">
+<p>The function <code>func</code> is expected to take the item as the first parameter (required).</p>
 </div>
 <div class="paragraph">
 <p><strong>Example</strong></p>
@@ -4665,6 +4674,9 @@ mantissa = <code>num</code> * pow(2, -exponent)</p>
 <h3 id="_everyentryobject_obj_function_func"><a class="anchor" href="#_everyentryobject_obj_function_func"></a><code>everyEntry(object obj, function func)</code></h3>
 <div class="paragraph">
 <p>Returns a boolean depending on if all key-value pairs of <code>obj</code> pass the <code>func</code>.</p>
+</div>
+<div class="paragraph">
+<p>The function <code>func</code> is expected to take the value as the first parameter (required) and the key as the second parameter (optional).</p>
 </div>
 <div class="paragraph">
 <p><strong>Example</strong></p>
