[CI] Publish Documentation for b7a4a23d2b285ca68bc2585dc2a6b192126a87ed

--- a/datasonnet/latest/libraries-core.html
+++ b/datasonnet/latest/libraries-core.html
@@ -2034,7 +2034,7 @@ All properties of the object can be removed using a <code>value</code> in the ar
 </div>
 </div>
 <div class="sect2">
-<h3 id="_selectobject_obj_string_path"><a class="anchor" href="#_selectobject_obj_string_path"></a><code>select(object obj, string path</code></h3>
+<h3 id="_selectobject_obj_string_path"><a class="anchor" href="#_selectobject_obj_string_path"></a><code>select(object obj, string path)</code></h3>
 <div class="paragraph">
 <p>Returns a value inside <code>obj</code> by the provided <code>path</code>. For nested objects, the path is separated by a dot ('.').</p>
 </div>
